--- a/src/main/webapp/FasaleBay.html
+++ b/src/main/webapp/FasaleBay.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Welcome to FASALe-BAY</title>
-<link rel="stylesheet" type="text/css" href="FasaleBayCSS.css">
+<link rel="stylesheet" type="text/css" href="home.css">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 <body>
 
@@ -18,9 +19,14 @@
 	<a href="contact.html">Contact</a>
 	<a href="about.html">About</a>
 </div>
-  
-</section>
 
+</section>
+  <div class="w3-card-4" style="width:100%">
+    <img src="25177.jpg" alt="Alps" style="width:100%" >
+    <div class="w3-container w3-center">
+      <p>Agriculture contributes to nearly one third of India GDP. It provides livelihood for the major Indian population. Some of the challenges agriculture faces are old, some are new. Government must give agriculture the same importance as industries. If the proper care won't be taken, the words like "small farmer" will become a history.</p>
+    </div>
+  </div>
 
 </body>
 </html>
