--- a/src/main/webapp/DisplayAllFarmerDetails.html
+++ b/src/main/webapp/DisplayAllFarmerDetails.html
@@ -3,23 +3,23 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
-<link rel="stylesheet" type="text/css" href="FasaleBayCSS.css">
-<style>
-table {
-	border: 3px ;
-	width: 100%;
-}
+<link rel="stylesheet" type="text/css" href="home.css">
+<link rel="stylesheet" type="text/css" href="table.css">
 
-#detailsForm {
-	text-align: left;
-	margin-top: 75px;
-}
-</style>
 <script src="https://code.jquery.com/jquery-3.4.1.js">
 	
 </script>
 <script>
 	$(function() {
+		if (sessionStorage.getItem("aid") == null) {
+			alert("You need to login first");
+			window.location.href = "login.html";
+		} else {
+			$("#logout").click(function(evt) {
+				alert("Hope to see you soon");
+				sessionStorage.removeItem("aid");
+				window.location.href = "login.html";
+			})
 		$.ajax({
 
 			url : 'displayAllFarmerDetails.lti',
@@ -47,6 +47,7 @@ table {
 				
 				}
 			});
+		}
 		});
 
 		
@@ -56,6 +57,17 @@ table {
 <header>
   <h2>FASALe-BAY</h2>
 </header>
+
+<section>
+<div class="topnav">
+	<a href="adminDashboard.html">Home</a>
+	<a href="contact.html">Contact</a>
+	<a href="about.html">About</a>
+	<a	href="login.html" id="logout">Logout</a>
+</div>
+  
+</section>
+
 	<table id="records_table" border='1'>
 		<tr>
 			<th align="center" >Farmer Name</th>
