--- a/src/main/webapp/adminDashboard.html
+++ b/src/main/webapp/adminDashboard.html
@@ -3,56 +3,51 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Welcome to FASALe-BAY</title>
-<link rel="stylesheet" type="text/css" href="FasaleBayCSS.css">
+<link rel="stylesheet" type="text/css" href="home.css">
 </head>
 <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
 
 <script>
 	$(function() {
-		alert(sessionStorage.getItem("aid"));
+		$('#hiMsg').append("Hi " + sessionStorage.name + ",");
 		if (sessionStorage.getItem("aid") == null) {
 			alert("You need to login first");
 			window.location.href = "login.html";
 		} else {
 			$("#logout").click(function(evt) {
-				alert("clicked on logout hmmm");
-				alert(sessionStorage.getItem("aid"));
+				alert("Hope To See You Soon!");
 				sessionStorage.removeItem("aid");
-				alert(sessionStorage.getItem("aid"));
 				window.location.href = "login.html";
 			})
-			//window.location.href = "login.html"
 		}
 
 	});
 </script>
 <body>
 
-<header>
-  <h2>FASALe-BAY</h2>
-</header>
+	<header>
+		<h2>FASALe-BAY</h2>
+	</header>
 
-<section>
-<div class="topnav">
-	<a href="FasaleBay.html">Home</a>
-	<a href="login.html">Login</a>
-	<a href="contact.html">Contact</a>
-	<a href="about.html">About</a>
-	<a href="login.html" id="logout">Logout</a>
-</div>
-  <article>
-  <div id="result"></div>
-    
-    <a href = "DisplayAllFarmerDetails.html">See all Farmer details</a></br></br>
-    <a href = "DisplayAllBidderDetails.html">See all Bidder details</a></br></br>
-    <a href = "Admin.html">Crop Sell Requests</a></br></br>
-    <a href = "AdminBidApprove.html">Bid Approvals</a></br></br>
-    
-  </article>
-</section>
-<footer>
-  <p>Footer</p>
-</footer>
+	<section>
+		<div class="topnav">
+			<a href="FasaleBay.html">Home</a> <a href="contact.html">Contact</a>
+			<a href="about.html">About</a> <a href="login.html" id="logout">Logout</a>
+		</div>
+		<article>
+			<div id="result"></div>
+			<h1 id="hiMsg"></h1>
+			<a href="DisplayAllFarmerDetails.html">See all Farmer details</a></br>
+			</br> <a href="DisplayAllBidderDetails.html">See all Bidder details</a></br>
+			</br> <a href="AdminSellReqApproval.html">Crop Sell Requests</a></br>
+			</br> <a href="AdminBidApprove.html">Bid Approvals</a></br>
+			</br>
+
+		</article>
+	</section>
+	<footer>
+		<p>Footer</p>
+	</footer>
 
 </body>
 </html>
